k8s/manifests/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: payment
        image: sns-payment:latest
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - containerPort: 3000
        imagePullPolicy: "Never"
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /probes/liveness
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /probes/readiness
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: payment-config
          mountPath: "/opt/sns/config"
      serviceAccountName: sns-sa
      volumes:
      - name: payment-config
        configMap:
          name: payment-config
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: payment
